# ArchitectureHW

./: README.md
SimpleServer/: CMakeLists.txt  README.md  createDb.sh  start.sh  start_writer.sh  test.sh  writer_main.cpp
SimpleServer/config/: config.h
SimpleServer/database/: cache.cpp  database.h  person.cpp  person.h
SimpleServer/docker/: docker-compose.yml
SimpleServer/test/: unittest.cpp
SimpleServer/web_server/: http_request_factory.h  http_web_server.h
SimpleServer/web_server/handlers/: person_handler.h
